[gd_scene load_steps=3 format=3 uid="uid://brxhuy3j2slv7"]

[ext_resource type="Script" path="res://scenes/options_ui/options_ui.gd" id="1_xac8x"]
[ext_resource type="Theme" uid="uid://bub0krrjkgjvw" path="res://art/theme.tres" id="2_o1ev7"]

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_xac8x")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundOverlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="MusicLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Volume da MÃºsica"

[node name="MusicSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Volume dos Efeitos Sonoros"

[node name="SFXSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackBtn" type="Button" parent="Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 52.0
offset_right = 361.0
offset_bottom = 81.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_o1ev7")
theme_override_font_sizes/font_size = 29
text = "Voltar..."

[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Control/BackBtn" to="." method="_on_back_btn_pressed"]
